# framework

./: Cargo.toml  LICENSE  README.md  README_ru.md
.github/workflows/: publish.yml  tests.yml
desert-framework/: Cargo.toml
desert-framework-macros/: Cargo.toml
desert-framework-macros/src/: lib.rs
desert-framework/src/: controller.rs  dependency.rs  lib.rs  macros.rs  manager.rs  route.rs  service.rs  test.rs
