[package]
name = "desert-framework-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for desert-framework"
license = "MIT"
repository = "https://git.desert-chat.ru/Desert-Ecosystem/framework"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
