[package]
name = "desert_framework"
version = "0.1.2"
edition = "2021"
description = "Micro-framework for building backend applications in Rust with Axum"
license = "MIT"
repository = "https://github.com/Desert-Ecosystem/framework"

[dependencies]
tokio = { version = "1.47.1", features = ["sync"] }
log = "0.4.28"
axum = "0.8"
desert-framework-macros = { path = "../desert-framework-macros" }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["util"] }
